<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.vineetprasadverma.educationalapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/quiz_name"
            android:textSize="@dimen/header_size" />

        <EditText
            android:id="@+id/name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/Q1"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_Q1_Op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1_Op1"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q1_Op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1_Op2"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q1_Op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1_Op3"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q1_Op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1_Op4"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/Q2"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_Q2_Op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2_Op1"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q2_Op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2_Op2"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q2_Op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2_Op3"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q2_Op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2_Op4"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/Q3"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_Q3_Op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3_Op1"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q3_Op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3_Op2"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q3_Op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3_Op3"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q3_Op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3_Op4"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/Q4"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_Q4_Op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4_Op1"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q4_Op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4_Op2"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q4_Op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q4_Op3"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q4_Op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2_Op4"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/Q5"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_Q5_Op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5_Op1"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q5_Op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5_Op2"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q5_Op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5_Op3"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q5_Op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5_Op4"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/Q6"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/radio_button_Q6_Op1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:button="@drawable/custom_checkbox"
            android:padding="@dimen/checkbox_padding"
            android:text="@string/Q6_Op1"
            android:textAppearance="?android:textAppearanceSmall" />

        <CheckBox
            android:id="@+id/radio_button_Q6_Op2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:button="@drawable/custom_checkbox"
            android:padding="@dimen/checkbox_padding"
            android:text="@string/Q6_Op2"
            android:textAppearance="?android:textAppearanceSmall" />

        <CheckBox
            android:id="@+id/radio_button_Q6_Op3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:button="@drawable/custom_checkbox"
            android:padding="@dimen/checkbox_padding"
            android:text="@string/Q6_Op3"
            android:textAppearance="?android:textAppearanceSmall" />

        <CheckBox
            android:id="@+id/radio_button_Q6_Op4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:button="@drawable/custom_checkbox"
            android:padding="@dimen/checkbox_padding"
            android:text="@string/Q6_Op4"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/Q7"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_Q7_Op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7_Op1"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q7_Op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7_Op2"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q7_Op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7_Op3"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q7_Op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q7_Op4"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/Q8"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_Q8_Op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q8_Op1"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q8_Op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q8_Op2"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q8_Op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q8_Op3"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q8_Op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q8_Op4"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:text="@string/Q9"
            android:textAppearance="?android:textAppearanceMedium" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_Q9_Op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q9_Op1"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q9_Op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q9_Op2"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q9_Op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q9_Op3"
                android:textAppearance="?android:textAppearanceSmall" />

            <RadioButton
                android:id="@+id/radio_button_Q9_Op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q9_Op4"
                android:textAppearance="?android:textAppearanceSmall" />
        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/Q10"/>

        <EditText
            android:id="@+id/Q10_ans_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginLeft="@dimen/left_margin"
            android:hint="@string/Answer"
            android:inputType="textCapWords" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/top_margin"
            android:onClick="getResult"
            android:text="@string/getResult"
            android:layout_marginBottom="@dimen/bottom_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/top_margin"
            android:onClick="restartActivity"
            android:text="@string/reset"
            android:layout_marginBottom="@dimen/bottom_margin"/>

    </LinearLayout>
</ScrollView>
